making it more good

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,10 @@
 <body>
 
 <nav class="navbar">
-  <div class="logo">Arthya</div>
+<div class="logo">
+  <img src="assets/faviicon.png" alt="Arthya Logo" />
+  <span>Arthya</span>
+</div>
   <div class="nav-links">
     <a href="index.html">Home</a>
   </div>
@@ -19,11 +22,13 @@
   <div class="hero-content">
     <h1>Insights & Card Benefits</h1>
 
-    <div style="margin-top:40px;">
-      <a href="blog/hush-puppies.html" style="color:#6366f1; font-size:20px;">
-        How I Saved ₹1,500 at Hush Puppies →
-      </a>
-    </div>
+    <div class="blog-card">
+  <h2>How I Saved ₹1,500 at Hush Puppies</h2>
+  <p>Real story about uncovering hidden credit card benefits.</p>
+  <a href="blog/hush-puppies.html" class="blog-link">
+    Read Article →
+  </a>
+</div>
 
   </div>
 </section>
