--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="icon" type="image/png" href="assets/faviicon.png" />
   <title>Arthya — Where Value Finds Purpose</title>
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
@@ -10,7 +11,10 @@
 <body>
 
   <nav class="navbar">
-    <div class="logo">Arthya</div>
+<div class="logo">
+  <img src="assets/logo.png" alt="Arthya Logo" />
+  <span>Arthya</span>
+</div>
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="blog.html">Blog</a>
