making changes for feel good

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 
 <nav class="navbar">
 <div class="logo">
-  <img src="assets/faviicon.png" alt="Arthya Logo" />
+  <img src="../assets/faviicon.png" alt="Arthya Logo">
   <span>Arthya</span>
 </div>
   <div class="nav-links">
