--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <nav class="navbar">
 <div class="logo">
-  <img src="assets/logo.png" alt="Arthya Logo" />
+  <img src="assets/faviicon.png" alt="Arthya Logo">
   <span>Arthya</span>
 </div>
     <div class="nav-links">
@@ -38,6 +38,50 @@
       <p class="subtext">No spam. Just curated value.</p>
     </div>
   </section>
+
+<section class="section">
+  <div class="container">
+    <h2>Most People Leave Money on the Table</h2>
+    <p class="section-text">
+      Banks offer hidden discounts, merchant deals, and partner benefits —
+      but they’re scattered, hard to track, and rarely used.
+    </p>
+  </div>
+</section>
+
+<section class="section highlight">
+  <div class="container">
+    <h2>Arthya Curates What You Already Own</h2>
+    <p class="section-text">
+      We help you discover active card offers, seasonal benefits,
+      and hidden perks across your credit & debit cards —
+      so every swipe works smarter.
+    </p>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container">
+    <h2>How It Works</h2>
+
+    <div class="features">
+      <div class="feature-card">
+        <h3>1. We Track Offers</h3>
+        <p>Monitor bank & merchant promotions in one place.</p>
+      </div>
+
+      <div class="feature-card">
+        <h3>2. We Curate</h3>
+        <p>No spam. Only real, high-value benefits.</p>
+      </div>
+
+      <div class="feature-card">
+        <h3>3. You Save</h3>
+        <p>Maximize value from cards you already own.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 </body>
 </html>
