--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar">
-<div class="logo">
+<a href="/" class="logo">
   <span>Arthya</span>
 </div>
   <div class="nav-links">
