--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 
 <header class="navbar">
   <a href="/" class="logo">
-    <img src="assets/logo.png" alt="Arthya Logo">
+    <alt="Arthya Logo">
     <span>Arthya</span>
   </a>
   <nav>
