--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Arthya — Where Value Finds Purpose</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/styles.css">
-  <link rel="icon" href="assets/logo.png">
+  <link rel="icon" href="assets/faviicon.png">
+
 </head>
 
 <body>
