--- a/blog.html
+++ b/blog.html
@@ -7,46 +7,62 @@
 
   <style>
     body {
-      background: #070b1a;
+      background: radial-gradient(circle at top left, #111633, #070b1a 60%);
       color: #fff;
       font-family: system-ui, -apple-system, sans-serif;
+      margin: 0;
     }
 
     .blog-container {
-      max-width: 900px;
+      max-width: 950px;
       margin: 120px auto;
       padding: 20px;
     }
 
     .blog-card {
       background: rgba(255,255,255,0.05);
-      backdrop-filter: blur(20px);
+      backdrop-filter: blur(18px);
       border: 1px solid rgba(255,255,255,0.1);
-      border-radius: 20px;
-      padding: 25px;
-      margin-bottom: 25px;
+      border-radius: 18px;
+      padding: 30px;
+      margin-bottom: 30px;
       transition: 0.3s ease;
+      position: relative;
+      overflow: hidden;
     }
 
     .blog-card:hover {
       transform: translateY(-6px);
       border-color: #6c63ff;
+      box-shadow: 0 10px 40px rgba(108,99,255,0.25);
     }
 
     .blog-card h3 {
-      margin-bottom: 10px;
+      margin-bottom: 12px;
+      font-size: 22px;
     }
 
     .blog-card p {
       opacity: 0.7;
+      line-height: 1.6;
     }
 
     .blog-card a {
       display: inline-block;
-      margin-top: 12px;
+      margin-top: 15px;
       color: #6c63ff;
       text-decoration: none;
       font-weight: 600;
+    }
+
+    .tag-badge {
+      display: inline-block;
+      background: rgba(108,99,255,0.2);
+      color: #a5a1ff;
+      padding: 4px 10px;
+      border-radius: 12px;
+      font-size: 12px;
+      margin-bottom: 10px;
     }
 
     .loading {
@@ -66,8 +82,8 @@
 </header>
 
 <div class="blog-container">
-  <h1 style="text-align:center; margin-bottom:50px;">Latest Articles</h1>
-  <div id="posts" class="loading">Loading articles...</div>
+  <h1 style="text-align:center; margin-bottom:50px;">Finance Insights</h1>
+  <div id="posts" class="loading">Loading finance articles...</div>
 </div>
 
 <script>
@@ -79,14 +95,29 @@ fetch(rssUrl)
     const container = document.getElementById("posts");
     container.innerHTML = "";
 
-    data.items.slice(0, 6).forEach(post => {
+    const financePosts = data.items
+      .filter(post =>
+        post.categories.includes("finance") ||
+        post.categories.includes("credit-card") ||
+        post.categories.includes("cashback") ||
+        post.categories.includes("Arthya")
+      )
+      .slice(0, 6);
+
+    if (financePosts.length === 0) {
+      container.innerHTML = "No finance articles found yet.";
+      return;
+    }
+
+    financePosts.forEach(post => {
       const div = document.createElement("div");
       div.className = "blog-card";
 
       div.innerHTML = `
+        <div class="tag-badge">Finance</div>
         <h3>${post.title}</h3>
         <p>${post.pubDate.split(" ")[0]}</p>
-        <p>${post.description.replace(/<[^>]+>/g, '').substring(0, 150)}...</p>
+        <p>${post.description.replace(/<[^>]+>/g, '').substring(0, 160)}...</p>
         <a href="${post.link}" target="_blank">Read on Medium →</a>
       `;
 
